<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="15dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/name_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/name" />
    <EditText
        android:id="@+id/email_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/hint_email" />
    <EditText
        android:id="@+id/phone_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/phone_number" />
    <EditText
        android:id="@+id/password_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/hint_password" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>