<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:id="@+id/admino"
    >

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="10dp"
        android:textStyle="bold"
        android:id="@+id/name12"
        android:text="@string/name"
        android:layout_margin="5dp"
       />
    <TextView
        android:layout_width="100dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="10dp"
        android:textStyle="bold"
        android:id="@+id/email12"
        android:text="@string/hint_email"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="60dp"
        android:layout_weight="0.8"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="10dp"
        android:textStyle="bold"
        android:id="@+id/phone12"
        android:text="@string/phone_number"
        android:layout_margin="5dp"
        />

</LinearLayout>