<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logback"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Slog">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/trans_white_rectangle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="It's obligatory to register at your local home because the application will detect your home position and save it to become a reference to know your way back."
            android:textColor="#3b4148"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/rounded_white"
            android:drawableLeft="@drawable/ic_mail_icon"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:background="@drawable/rounded_white"
            android:drawableLeft="@drawable/ic_pass_icon"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User"
            android:id="@+id/user"
            android:textColor="#3b4148"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Supervisor"
            android:id="@+id/supervisor"
            android:textColor="#3b4148"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_pink"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#3b4148"
            android:textSize="15dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textterm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="By using Smart-Care you agree to"
            android:textAllCaps="false"
            android:textColor="#3b4148"
            android:textSize="15dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnUseTerms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:text="@string/term_of_use"
            android:textAllCaps="false"
            android:textColor="#3b4148"
            android:textStyle="bold"
            android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>

