<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uuser"
    android:orientation="vertical">
    <include
        layout="@layout/header_layout1"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/LL1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Supervisor :"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/superv"
            android:background="#0D353333">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold"
            android:id="@+id/name1222"
            android:text="@string/name"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold"
            android:id="@+id/email1222"
            android:text="@string/hint_email"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold"
            android:id="@+id/phone1222"
            android:text="@string/phone_number"
            android:layout_margin="5dp"
            />

    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#5900FFFF">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_distance"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 km"
                    android:id="@+id/tvDistance" />

                <ImageView
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_clock"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 min"
                    android:layout_marginRight="50dp"
                    android:id="@+id/tvDuration" />
            </LinearLayout>
        </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/LL2">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/upp"
                android:layout_marginLeft="5dp" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/down"
                />


        </RelativeLayout>
    </LinearLayout>


</LinearLayout>